core: switch from queue_message to send_message
This uses the new API in order to get the MAVLink sequence numbers
correct.

Signed-off-by: Julian Oes <julian@oes.ch>

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -132,6 +132,7 @@ install(FILES
     include/mavsdk/server_plugin_base.h
     include/mavsdk/geometry.h
     include/mavsdk/server_component.h
+    include/mavsdk/mavlink_address.h
     ${CMAKE_CURRENT_BINARY_DIR}/include/mavsdk/mavlink_include.h
     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/mavsdk"
 )
