--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -486,6 +486,11 @@ jobs:
           - name: macOS-framework
             build-framework: ON
     steps:
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          architecture: 'x64'
       - uses: actions/checkout@v4
         with:
           submodules: recursive
@@ -540,6 +545,11 @@ jobs:
             platform: SIMULATOR64
             sdk: iphonesimulator
     steps:
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          architecture: 'x64'
       - uses: actions/checkout@v4
         with:
           submodules: recursive
