--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -36,3 +36,4 @@ add_subdirectory(terminate)
 add_subdirectory(transponder)
 add_subdirectory(tune)
 add_subdirectory(vtol_transition)
+add_subdirectory(winch)
