plugins: add log streaming
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -25,6 +25,7 @@ add_subdirectory(geofence)
 add_subdirectory(gimbal)
 add_subdirectory(gimbal_device_tester)
 add_subdirectory(logfile_download)
+add_subdirectory(log_streaming)
 add_subdirectory(manual_control)
 add_subdirectory(mavshell)
 add_subdirectory(multiple_drones)
