--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -24,6 +24,7 @@ add_subdirectory(ftp_server)
 add_subdirectory(geofence)
 add_subdirectory(gimbal)
 add_subdirectory(gimbal_device_tester)
+add_subdirectory(log_callback)
 add_subdirectory(logfile_download)
 add_subdirectory(log_streaming)
 add_subdirectory(manual_control)
