cmake: few more dependency fixes
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/src/integration_tests/CMakeLists.txt
+++ b/src/integration_tests/CMakeLists.txt
@@ -67,7 +67,8 @@ set_target_properties(integration_tests_runner
     PROPERTIES COMPILE_FLAGS ${warnings}
 )
 
-find_package(GTest)
+hunter_add_package(gtest)
+find_package(GTest REQUIRED)
 
 target_link_libraries(integration_tests_runner
     PRIVATE
