--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -10,7 +10,8 @@ set_target_properties(unit_tests_runner
     PROPERTIES COMPILE_FLAGS ${warnings}
 )
 
-find_package(GTest)
+hunter_add_package(GTest)
+find_package(GTest REQUIRED)
 
 target_link_libraries(unit_tests_runner
     mavsdk
