cmake: use more modern way to get liblzma
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/src/mavsdk/core/CMakeLists.txt
+++ b/src/mavsdk/core/CMakeLists.txt
@@ -3,6 +3,9 @@ find_package(Threads REQUIRED)
 
 find_package(MAVLink REQUIRED)
 
+hunter_add_package(lzma)
+find_package(LibLZMA REQUIRED)
+
 get_target_property(
     MAVLINK_INCLUDE_DIR
     MAVLink::mavlink
@@ -65,11 +68,7 @@ cmake_policy(SET CMP0079 NEW)
 target_link_libraries(mavsdk
     PRIVATE
     Threads::Threads
-    ${LIBLZMA_LIBRARIES}
-)
-target_include_directories(mavsdk
-    PRIVATE
-    ${LIBLZMA_INCLUDE_DIRS}
+    LibLZMA::LibLZMA
 )
 
 if (NOT BUILD_WITHOUT_CURL)
