CI: try latest MSVC

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -548,11 +548,15 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+      - uses: TheMrMilchmann/setup-msvc-dev@v3
+        with:
+          arch: x64
+          toolset: 17.9
       - uses: actions/cache@v4
         id: cache
         with:
           path: ./build/release/third_party/install
-          key: ${{ github.job }}-${{ hashFiles('./third_party/**') }}-3
+          key: ${{ github.job }}-${{ hashFiles('./third_party/**') }}-4
       - name: disable superbuild on cache hit
         if: steps.cache.outputs.cache-hit == 'true'
         run: |
