--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(fly_mission)
 add_subdirectory(fly_multiple_drones)
 add_subdirectory(fly_qgc_mission)
 add_subdirectory(follow_me)
+add_subdirectory(mavlink_forwarding)
 add_subdirectory(ftp_client)
 add_subdirectory(ftp_server)
 add_subdirectory(geofence)
