--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,6 +38,7 @@ endif()
 # This will noop if hunter is not enabled
 hunter_add_package(jsoncpp)
 hunter_add_package(CURL)
+hunter_add_package(lzma)
 
 find_package(CURL REQUIRED)
 find_package(LibLZMA REQUIRED)
