ci: check disabled system_tests
Let's see if they still fail.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,8 +69,8 @@ jobs:
         run: cmake --build build/release -j2
       - name: unit tests
         run: ./build/release/src/unit_tests/unit_tests_runner
-      #- name: system tests
-      #  run: ./build/release/src/system_tests/system_tests_runner
+      - name: system tests
+        run: ./build/release/src/system_tests/system_tests_runner
 
   ubuntu-superbuild:
     name: ${{ matrix.ubuntu_image }} (mavsdk_server, superbuild)
@@ -339,8 +339,8 @@ jobs:
         run: cmake --build build/release --target install -- -j2
       - name: unit tests
         run: ./build/release/src/unit_tests/unit_tests_runner
-      # - name: system tests
-      #   run: ./build/release/src/system_tests/system_tests_runner
+      - name: system tests
+        run: ./build/release/src/system_tests/system_tests_runner
       - name: test (mavsdk_server)
         run: ./build/release/src/mavsdk_server/test/unit_tests_mavsdk_server
       - name: Upload as artefact
