Enable ssl in curl

--- a/src/mavsdk/CMakeLists.txt
+++ b/src/mavsdk/CMakeLists.txt
@@ -12,6 +12,8 @@ hunter_add_package(tinyxml2)
 find_package(tinyxml2 REQUIRED)
 
 target_link_libraries(mavsdk
+    PUBLIC
+    ${CMAKE_DL_LIBS}
     PRIVATE
     JsonCpp::JsonCpp
     tinyxml2::tinyxml2
